# eywa

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: config.rs  db.rs  embed.rs  ingest.rs  init.rs  lib.rs  main.rs  rerank.rs  types.rs  utils.rs
src/chunking/: markdown.rs  mod.rs  pdf.rs  text.rs
src/commands/: info.rs  ingest.rs  init.rs  mod.rs  reset.rs  search.rs  sources.rs
src/mcp/: mod.rs  tools.rs
src/pipeline/: mod.rs
src/server/: mod.rs  routes.rs  state.rs  worker.rs
src/setup/: download.rs  mod.rs  tui.rs
tests/: integration.rs
web/v2/: add-docs.js  app.js  index.html  settings.js  style.css
wix/: License.rtf
